--- a/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
@@ -69,7 +69,7 @@
                 </p:panel>
             </h:form>
             <h:form>                
-                <p:commandButton action="viewcontractdetail.xhtml?faces-redirect=true" value="Go Back" icon="ui-icon-circle-arrow-w" />
+                <p:commandButton action="viewallcontracts.xhtml?faces-redirect=true" value="Go Back" icon="ui-icon-circle-arrow-w" />
             </h:form>
 
 
