--- a/MerlionPortal/MerlionPortal-war/web/crms/createservicepo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservicepo.xhtml
@@ -95,7 +95,7 @@
 
 
                             <h:outputLabel style="font-weight: bold" value="Party A Company Name"/><p:spacer width="40" height="20" />
-                            <h:outputLabel  value="#{createServiceContractManagedBean.partyAName}" />
+                            <h:outputLabel  value="#{createServicePOManagedBean.partyAName}" />
 
 
                             <h:outputLabel style="font-weight: bold" value="Party B ID"/><p:spacer width="40" height="20" />
@@ -103,26 +103,26 @@
 
 
                             <h:outputLabel style="font-weight: bold" value="Party B Company Name"/><p:spacer width="40" height="20" />
-                            <h:outputLabel  value="#{createServiceContractManagedBean.partyBName}" />
+                            <h:outputLabel  value="#{createServicePOManagedBean.partyBName}" />
 
 
-                            <h:outputLabel  style="font-weight: bold" value="Service Type * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  style="font-weight: bold" value="Service Type  "/><p:spacer width="40" height="20" />
                             <h:outputLabel  value="#{createServicePOManagedBean.contract.serviceType}" />
 
-                            <h:outputLabel  style="font-weight: bold" value="Start Date * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  style="font-weight: bold" value="Start Date  "/><p:spacer width="40" height="20" />
                             <h:outputLabel  value="#{createServicePOManagedBean.contract.startDate}" />
 
-                            <h:outputLabel  style="font-weight: bold" value="End Date * "/><p:spacer width="40" height="20" />
+                            <h:outputLabel  style="font-weight: bold" value="End Date  "/><p:spacer width="40" height="20" />
                             <h:outputLabel  value="#{createServicePOManagedBean.contract.endDate}" />
 
-                            <h:outputLabel  style="font-weight: bold" value="Final Price Per TEU * "/><p:spacer width="20" height="20" />
+                            <h:outputLabel  style="font-weight: bold" value="Final Price Per TEU  "/><p:spacer width="20" height="20" />
                             <h:outputLabel  value="#{createServicePOManagedBean.contract.price}" />
 
                             <c:if test="#{createServicePOManagedBean.contract.serviceType eq 'Transportation'}" >
-                                <h:outputLabel  style="font-weight: bold" value="Origin * "/><p:spacer width="20" height="20" />
+                                <h:outputLabel  style="font-weight: bold" value="Origin  "/><p:spacer width="20" height="20" />
                                 <h:outputLabel  value="#{createServicePOManagedBean.contract.origin}" />
 
-                                <h:outputLabel  style="font-weight: bold" value="Destination * "/><p:spacer width="20" height="20" />
+                                <h:outputLabel  style="font-weight: bold" value="Destination  "/><p:spacer width="20" height="20" />
                                 <h:outputLabel  value="#{createServicePOManagedBean.contract.destination}" />
 
                                 <p:outputLabel for="deliveryDate" value="Service Delivery Date " /><p:spacer width="20" height="20" />
@@ -132,12 +132,9 @@
                             </c:if>
 
                             <c:if test="#{createServicePOManagedBean.contract.serviceType eq 'Warehouse'}" >
-                                <h:outputLabel  style="font-weight: bold" value="Warehoue ID *" /><p:spacer width="20" height="20" />
-                                <h:outputLabel value="#{createServicePOManagedBean.contract.serviceQuotation.warehoueId}" />
-                                <h:outputLabel  style="font-weight: bold" value="Storage Zone ID *" /><p:spacer width="20" height="20" />
-                                <h:outputLabel value="#{createServicePOManagedBean.contract.serviceQuotation.storageZoneId}" />
-                                <h:outputLabel  style="font-weight: bold" value="Storage Bin ID *" /><p:spacer width="20" height="20" />
-                                <h:outputLabel value="#{createServicePOManagedBean.contract.serviceQuotation.storageBinId}" />
+                                <h:outputLabel  style="font-weight: bold" value="Storage Type " /><p:spacer width="20" height="20" />
+                                <h:outputLabel value="#{createServicePOManagedBean.contract.serviceQuotation.storageType}" />
+
 
                                 <p:outputLabel for="startDate" value="Service Start Date " /><p:spacer width="20" height="20" />
                                 <p:calendar id="startDate" required="true" requiredMessage="Start Date is required" value="#{createServicePOManagedBean.serviceStartDate}" pattern="dd-MM-yyyy" mask="true" mindate="#{createServicePOManagedBean.today}" >
@@ -149,6 +146,11 @@
                             </c:if>
                             <h:outputLabel  style="font-weight: bold" value="Quantity in TEU * "/><p:spacer width="20" height="20" />
                             <p:inputText  value="#{createServicePOManagedBean.volume}" required="true"  requiredMessage="Quantity is required"/>
+                            <h:outputLabel  style="font-weight: bold" value="Product ID * "/><p:spacer width="20" height="20" />
+                            <p:inputText  value="#{createServicePOManagedBean.productId}" required="true"  requiredMessage="Product ID is required"/>
+
+                            <h:outputLabel  style="font-weight: bold" value="Product Quantity per TEU * "/><p:spacer width="20" height="20" />
+                            <p:inputText  value="#{createServicePOManagedBean.productQuantityPerTEU}" required="true"  requiredMessage="Product Quantity per TEU  is required"/>
                             <p:commandButton value="Generate Service PO" icon="ui-icon-check" actionListener="#{createServicePOManagedBean.createServicePO()}" ajax="true" update="form2" />
                         </c:if>
 
