changes format for producing mrp result for all components-Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/materialreq.xhtml
@@ -200,6 +200,8 @@
                             </p:panelGrid>
                         </p:panel>
                     </p:dataGrid>
+                     <p:commandButton value="Go Back"  action="#{materialReqManagedBean.backToMPSResult}" />
+                   
                 </p:panel>
 
 
