--- a/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mpsresult.xhtml
@@ -129,9 +129,18 @@
                             <p:column><h:outputText value="#{mPSResultManagedBean.wk4Demand}" /></p:column>
                             <p:column><h:outputText value="#{mPSResultManagedBean.wk5Demand}" /></p:column>
                         </p:row>
-
                     </p:panelGrid>
+                    <p:panelGrid style="margin-top:20px">
+                        <p:row>
+                            <p:column>
+                                <h:outputLabel for="minOnHand" value="Enter Minimum Remaining On Hand Quantity:" style="font-weight:bold" />
+                            </p:column>
+                            <p:column> 
+                                <p:inputText required="true" requiredMessage="Minimum remaining quantity required is required." id="minOnHand" value="#{mPSResultManagedBean.minOnHand}" />
 
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>
                     <p:commandButton value="Go Back"  action="#{mPSResultManagedBean.backToMPSBuffer}" />
                     <p:commandButton value="Proceed to view material requirement planning"  action="#{mPSResultManagedBean.proceedToMaterialReq}" />
                 </p:panel>
