--- a/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/generatequotation.xhtml
@@ -22,7 +22,7 @@
 
         <ui:define name="left">
 
-           <h:form id="formMain">
+            <h:form >
                 <p:panelMenu>
                     <p:submenu label="Home" styleClass="display:block">
                         <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
@@ -89,7 +89,38 @@
                             but given to ruthless violence whenever anything stands against the good of the family." />
                     </h:panelGrid>
                 </p:fieldset>
+                <p:row>
+                    <p:column>
+                        <h:outputLabel for="currency" style="font-weight: bold" value="Currency:   *" />
+                    </p:column>
+                    <p:column>                        
+                        <h:selectOneMenu id="currency" value="#{quotationManagedBean.currency}" required="true" label="Currency">
+                            <f:selectItem itemLabel="Select Currency" itemValue="" noSelectionOption="true" />
 
+                            <f:selectItem itemLabel="US Dollar (USD)" itemValue="US Dollar (USD)" />
+                            <f:selectItem itemLabel="European Euro (EUR)" itemValue="European Euro (EUR)" />
+                            <f:selectItem itemLabel="Japan Yen (JPY)" itemValue="Japan Yen (JPY)" />
+                            <f:selectItem itemLabel="Pound Sterling (GBP)" itemValue="Pound Sterling (GBP)" />
+                            <f:selectItem itemLabel="Australian Dollar (AUD)" itemValue="Australian Dollar (AUD)" />
+                            <f:selectItem itemLabel="Swiss Franc (CHF)" itemValue="Swiss Franc (CHF)" />
+                            <f:selectItem itemLabel="Canadian Dollar (CAD)" itemValue="Canadian Dollar (CAD)" />
+                            <f:selectItem itemLabel="Hong Kong Dollar (HKD)" itemValue="Hong Kong Dollar (HKD)" />
+                            <f:selectItem itemLabel="Swedish Krona (SEK)" itemValue="Swedish Krona (SEK)" />
+                            <f:selectItem itemLabel="New Zealand Dollar (NZD)" itemValue="New Zealand Dollar (NZD)" />
+
+                            <f:selectItem itemLabel="South African Rand (ZAR)" itemValue="South African Rand (ZAR)" />
+                            <f:selectItem itemLabel="Russian Ruble (RUB)" itemValue="Russian Ruble (RUB)" />
+                            <f:selectItem itemLabel="Indian Rupee (INR)" itemValue="Indian Rupee (INR)" />
+                            <f:selectItem itemLabel="Singapore Dollar (SGD)" itemValue="Singapore Dollar (SGD)" />
+                            <f:selectItem itemLabel="Bulgarian Lev (BGN)" itemValue="Bulgarian Lev (BGN)" />
+                            <f:selectItem itemLabel="Chinese Yuan Renminbi (CNY)" itemValue="Chinese Yuan Renminbi (CNY)" />
+                            <f:selectItem itemLabel="Thailand Baht (THB)" itemValue="Thailand Baht (THB)" />
+                            <f:selectItem itemLabel="Hungary Forint(HUF)" itemValue="Hungary Forint(HUF)" />   
+                            <f:selectItem itemLabel="Norwegian Krone (NOK)" itemValue="Norwegian Krone (NOK)" />
+                            <f:selectItem itemLabel="Mexican Peso (MXN)" itemValue="Mexican Peso (MXN)" />
+                        </h:selectOneMenu>
+                    </p:column>
+                </p:row> 
                 <f:facet name="header">
                     Quotation Items
                 </f:facet>
